--- a/frontend/src/components/layout/ChatArea/ChatArea.module.scss
+++ b/frontend/src/components/layout/ChatArea/ChatArea.module.scss
@@ -55,6 +55,6 @@
 
 @media (max-width: 768px) {
 	.chatArea {
-		max-height: calc(100vh - 100px);
+		max-height: none;
 	}
 }
