--- a/frontend/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/frontend/src/components/layout/Sidebar/Sidebar.module.scss
@@ -37,9 +37,9 @@
 
 @media (max-width: 768px) {
 	.sidebar {
-		height: auto;
+		height: 100%;
 		min-height: 0;
-		max-height: calc(100vh - 60px);
+		max-height: none;
 		grid-template-rows: 1fr minmax(120px, 180px) auto;
 	}
 }
