--- a/frontend/src/components/ui/Input/Input.module.scss
+++ b/frontend/src/components/ui/Input/Input.module.scss
@@ -18,8 +18,9 @@
 	outline: none;
 	color: #000;
 	background-color: #fff;
+	width: 100%;
+	min-width: 0;
 
-	&:focus,
 	&:disabled {
 		background-color: #e4e4e4;
 	}
